--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,7 +84,8 @@ x-nextjs-frontend: &nextjs-frontend
 services:
   # PostgreSQL Database
   postgres:
-    image: mirror.gcr.io/pgvector/pgvector:pg16
+    image: pgvector/pgvector:pg16
+    container_name: rhesis-postgres
     environment:
       POSTGRES_DB: ${SQLALCHEMY_DB_NAME:-rhesis-db}
       POSTGRES_USER: ${SQLALCHEMY_DB_USER:-rhesis-user}
