--- a/infrastructure/k8s/charts/rhesis/values.yaml
+++ b/infrastructure/k8s/charts/rhesis/values.yaml
@@ -37,7 +37,7 @@ database:
   postgresql:
     disableSecurityContext: true  # Temporarily disable for PostgreSQL due to permission issues
     image:
-      repository: mirror.gcr.io/pgvector/pgvector
+      repository: pgvector/pgvector
       tag: "pg16"
     persistence:
       enabled: true
