refactor: rename model config vars for clarity
Rename DEFAULT_GENERATION_MODEL → DEFAULT_LANGUAGE_MODEL_PROVIDER and DEFAULT_MODEL_NAME → DEFAULT_LANGUAGE_MODEL_NAME across all services

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,8 +63,8 @@ x-rhesis-config: &rhesis-config
   RHESIS_CONNECTOR_DISABLED: ${RHESIS_CONNECTOR_DISABLED:-true}
   FRONTEND_URL: ${FRONTEND_URL:-http://localhost:3000}
   BACKEND_URL: ${BACKEND_URL:-http://backend:8080}
-  DEFAULT_GENERATION_MODEL: ${DEFAULT_GENERATION_MODEL:-rhesis}
-  DEFAULT_MODEL_NAME: ${DEFAULT_MODEL_NAME:-gemini-2.0-flash}
+  DEFAULT_LANGUAGE_MODEL_PROVIDER: ${DEFAULT_LANGUAGE_MODEL_PROVIDER:-rhesis}
+  DEFAULT_LANGUAGE_MODEL_NAME: ${DEFAULT_LANGUAGE_MODEL_NAME:-gemini-2.0-flash}
 
 x-telemetry-config: &telemetry-config
   OTEL_EXPORTER_OTLP_ENDPOINT: ${OTEL_EXPORTER_OTLP_ENDPOINT:-https://telemetry.rhesis.ai}
