--- a/.env.example
+++ b/.env.example
@@ -83,6 +83,12 @@ GEMINI_API_KEY=your-gemini-api-key
 GOOGLE_API_KEY=your-google-api-key
 GEMINI_MODEL_NAME=gemini-2.0-flash-001
 
+# Default Model Configuration
+DEFAULT_LANGUAGE_MODEL_PROVIDER=vertex_ai
+DEFAULT_LANGUAGE_MODEL_NAME=gemini-2.0-flash
+DEFAULT_EMBEDDING_MODEL_PROVIDER=openai
+DEFAULT_EMBEDDING_MODEL_NAME=text-embedding-3-small
+
 # =============================================================================
 # 📧 EMAIL CONFIGURATION
 # =============================================================================
