ci: add contents read permission for checkout
Explicit permissions block with only id-token: write
sets contents to none by default, which prevents
actions/checkout from reading the repository.

--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -17,6 +17,7 @@ jobs:
       name: pypi
       url: https://pypi.org/p/rhesis-sdk
     permissions:
+      contents: read   # Required for actions/checkout
       id-token: write  # Required for trusted publishing
     
     steps:
@@ -42,6 +43,7 @@ jobs:
       name: pypi
       url: https://pypi.org/p/rhesis
     permissions:
+      contents: read   # Required for actions/checkout
       id-token: write  # Required for trusted publishing
     
     steps:
