Fix PyPI publish workflow (#1357)
* ci: fix pypi publish workflow missing checkout

Move actions/checkout step from composite action to
the workflow jobs so the local action.yml can be found
by the runner before execution.

* ci: add contents read permission for checkout

Explicit permissions block with only id-token: write
sets contents to none by default, which prevents
actions/checkout from reading the repository.

--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -17,9 +17,13 @@ jobs:
       name: pypi
       url: https://pypi.org/p/rhesis-sdk
     permissions:
+      contents: read   # Required for actions/checkout
       id-token: write  # Required for trusted publishing
     
     steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
     - name: Setup Python build environment
       uses: ./.github/actions/setup-python-build
     
@@ -39,9 +43,13 @@ jobs:
       name: pypi
       url: https://pypi.org/p/rhesis
     permissions:
+      contents: read   # Required for actions/checkout
       id-token: write  # Required for trusted publishing
     
     steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
     - name: Setup Python build environment
       uses: ./.github/actions/setup-python-build
     
