feat: consolidate model environment variables to unified format
- Combine DEFAULT_GENERATION_MODEL and DEFAULT_MODEL_NAME into single variable
- Add DEFAULT_EVALUATION_MODEL for language-model-as-a-judge scenarios
- Update DEFAULT_EMBEDDING_MODEL to use provider/model_name format
- All models now use consistent provider/model_name format (e.g., vertex_ai/gemini-2.0-flash)

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -455,7 +455,8 @@ jobs:
           GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }},
           GEMINI_MODEL_NAME=${{ secrets.GEMINI_MODEL_NAME }},
           DEFAULT_GENERATION_MODEL=${{ secrets.DEFAULT_GENERATION_MODEL }},
-          DEFAULT_MODEL_NAME=${{ secrets.DEFAULT_MODEL_NAME }},
+          DEFAULT_EVALUATION_MODEL=${{ secrets.DEFAULT_EVALUATION_MODEL }},
+          DEFAULT_EMBEDDING_MODEL=${{ secrets.DEFAULT_EMBEDDING_MODEL }},
           GOOGLE_APPLICATION_CREDENTIALS=${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }},
           VERTEX_AI_LOCATION=${{ secrets.VERTEX_AI_LOCATION }},
           VERTEX_AI_PROJECT=${{ secrets.VERTEX_AI_PROJECT }},
@@ -526,7 +527,8 @@ jobs:
           GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }},
           GEMINI_MODEL_NAME=${{ secrets.GEMINI_MODEL_NAME }},
           DEFAULT_GENERATION_MODEL=${{ secrets.DEFAULT_GENERATION_MODEL }},
-          DEFAULT_MODEL_NAME=${{ secrets.DEFAULT_MODEL_NAME }},
+          DEFAULT_EVALUATION_MODEL=${{ secrets.DEFAULT_EVALUATION_MODEL }},
+          DEFAULT_EMBEDDING_MODEL=${{ secrets.DEFAULT_EMBEDDING_MODEL }},
           GOOGLE_APPLICATION_CREDENTIALS=${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }},
           VERTEX_AI_LOCATION=${{ secrets.VERTEX_AI_LOCATION }},
           VERTEX_AI_PROJECT=${{ secrets.VERTEX_AI_PROJECT }},
@@ -717,7 +719,8 @@ jobs:
           GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }},
           GEMINI_MODEL_NAME=${{ secrets.GEMINI_MODEL_NAME }},
           DEFAULT_GENERATION_MODEL=${{ secrets.DEFAULT_GENERATION_MODEL }},
-          DEFAULT_MODEL_NAME=${{ secrets.DEFAULT_MODEL_NAME }},
+          DEFAULT_EVALUATION_MODEL=${{ secrets.DEFAULT_EVALUATION_MODEL }},
+          DEFAULT_EMBEDDING_MODEL=${{ secrets.DEFAULT_EMBEDDING_MODEL }},
           GOOGLE_APPLICATION_CREDENTIALS=${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }},
           VERTEX_AI_LOCATION=${{ secrets.VERTEX_AI_LOCATION }},
           VERTEX_AI_PROJECT=${{ secrets.VERTEX_AI_PROJECT }},
@@ -795,7 +798,8 @@ jobs:
           GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }},
           GEMINI_MODEL_NAME=${{ secrets.GEMINI_MODEL_NAME }},
           DEFAULT_GENERATION_MODEL=${{ secrets.DEFAULT_GENERATION_MODEL }},
-          DEFAULT_MODEL_NAME=${{ secrets.DEFAULT_MODEL_NAME }},
+          DEFAULT_EVALUATION_MODEL=${{ secrets.DEFAULT_EVALUATION_MODEL }},
+          DEFAULT_EMBEDDING_MODEL=${{ secrets.DEFAULT_EMBEDDING_MODEL }},
           GOOGLE_APPLICATION_CREDENTIALS=${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }},
           VERTEX_AI_LOCATION=${{ secrets.VERTEX_AI_LOCATION }},
           VERTEX_AI_PROJECT=${{ secrets.VERTEX_AI_PROJECT }},
