--- a/infrastructure/config/service-secrets-config.sh.example
+++ b/infrastructure/config/service-secrets-config.sh.example
@@ -26,8 +26,9 @@ export DEV_FRONTEND_URL="https://dev-app.rhesis.ai"
 export DEV_GEMINI_API_KEY="your-gemini-api-key"
 export DEV_GOOGLE_API_KEY="your-google-api-key"
 export DEV_GEMINI_MODEL_NAME="gemini-2.0-flash-001"
-export DEV_DEFAULT_GENERATION_MODEL="vertex_ai"
-export DEV_DEFAULT_MODEL_NAME="gemini-2.0-flash"  # Recommended - faster than 2.5
+export DEV_DEFAULT_GENERATION_MODEL="vertex_ai/gemini-2.0-flash"
+export DEV_DEFAULT_EVALUATION_MODEL="vertex_ai/gemini-2.0-flash"
+export DEV_DEFAULT_EMBEDDING_MODEL="vertex_ai/text-embedding-005"
 export DEV_GOOGLE_APPLICATION_CREDENTIALS="your-base64-encoded-service-account-json"
 export DEV_VERTEX_AI_LOCATION="europe-west4"  # Netherlands - best for Europe
 export DEV_VERTEX_AI_PROJECT=""  # Optional: Leave empty to auto-extract from credentials
@@ -103,8 +104,9 @@ export STG_FRONTEND_URL="https://stg-app.rhesis.ai"
 export STG_GEMINI_API_KEY="your-gemini-api-key"
 export STG_GOOGLE_API_KEY="your-google-api-key"
 export STG_GEMINI_MODEL_NAME="gemini-2.0-flash-001"
-export STG_DEFAULT_GENERATION_MODEL="vertex_ai"
-export STG_DEFAULT_MODEL_NAME="gemini-2.0-flash"  # Recommended - faster than 2.5
+export STG_DEFAULT_GENERATION_MODEL="vertex_ai/gemini-2.0-flash"
+export STG_DEFAULT_EVALUATION_MODEL="vertex_ai/gemini-2.0-flash"
+export STG_DEFAULT_EMBEDDING_MODEL="vertex_ai/text-embedding-005"
 export STG_GOOGLE_APPLICATION_CREDENTIALS="your-base64-encoded-service-account-json"
 export STG_VERTEX_AI_LOCATION="europe-west4"  # Netherlands - best for Europe
 export STG_VERTEX_AI_PROJECT=""  # Optional: Leave empty to auto-extract from credentials
@@ -179,8 +181,9 @@ export PRD_FRONTEND_URL="https://app.rhesis.ai"
 export PRD_GEMINI_API_KEY="your-gemini-api-key"
 export PRD_GOOGLE_API_KEY="your-google-api-key"
 export PRD_GEMINI_MODEL_NAME="gemini-2.0-flash-001"
-export PRD_DEFAULT_GENERATION_MODEL="vertex_ai"
-export PRD_DEFAULT_MODEL_NAME="gemini-2.0-flash"  # Recommended - faster than 2.5
+export PRD_DEFAULT_GENERATION_MODEL="vertex_ai/gemini-2.0-flash"
+export PRD_DEFAULT_EVALUATION_MODEL="vertex_ai/gemini-2.0-flash"
+export PRD_DEFAULT_EMBEDDING_MODEL="vertex_ai/text-embedding-005"
 export PRD_GOOGLE_APPLICATION_CREDENTIALS="your-base64-encoded-service-account-json"
 export PRD_VERTEX_AI_LOCATION="europe-west4"  # Netherlands - best for Europe
 export PRD_VERTEX_AI_PROJECT=""  # Optional: Leave empty to auto-extract from credentials
@@ -250,8 +253,9 @@ export TEST_JWT_ACCESS_TOKEN_EXPIRE_MINUTES="10080"
 export TEST_FRONTEND_URL="http://localhost:3000"
 export TEST_GEMINI_API_KEY="your-gemini-api-key"
 export TEST_GEMINI_MODEL_NAME="gemini-2.0-flash-001"
-export TEST_DEFAULT_GENERATION_MODEL="vertex_ai"
-export TEST_DEFAULT_MODEL_NAME="gemini-2.0-flash"  # Recommended - faster than 2.5
+export TEST_DEFAULT_GENERATION_MODEL="vertex_ai/gemini-2.0-flash"
+export TEST_DEFAULT_EVALUATION_MODEL="vertex_ai/gemini-2.0-flash"
+export TEST_DEFAULT_EMBEDDING_MODEL="vertex_ai/text-embedding-005"
 export TEST_GOOGLE_APPLICATION_CREDENTIALS="your-base64-encoded-service-account-json"
 export TEST_VERTEX_AI_LOCATION="europe-west4"  # Netherlands - best for Europe
 export TEST_VERTEX_AI_PROJECT=""  # Optional: Leave empty to auto-extract from credentials
