--- a/.env.example
+++ b/.env.example
@@ -63,6 +63,11 @@ DB_ENCRYPTION_KEY=BASE64_ENCODED_DB_ENCRYPTION_KEY
 # =============================================================================
 # Choose one or more AI providers based on your needs
 
+# Default models (format: provider/model_name)
+DEFAULT_GENERATION_MODEL=vertex_ai/gemini-2.0-flash
+DEFAULT_EVALUATION_MODEL=vertex_ai/gemini-2.0-flash
+DEFAULT_EMBEDDING_MODEL=vertex_ai/text-embedding-005
+
 # Azure OpenAI (if using Azure)
 AZURE_OPENAI_ENDPOINT=https://your-resource.openai.azure.com/
 AZURE_OPENAI_API_KEY=your-azure-openai-api-key
