--- a/.github/workflows/worker.yml
+++ b/.github/workflows/worker.yml
@@ -282,7 +282,8 @@ jobs:
             --from-literal=GOOGLE_API_KEY="${{ secrets.GOOGLE_API_KEY }}" \
             --from-literal=GEMINI_MODEL_NAME="${{ secrets.GEMINI_MODEL_NAME }}" \
             --from-literal=DEFAULT_GENERATION_MODEL="${{ secrets.DEFAULT_GENERATION_MODEL }}" \
-            --from-literal=DEFAULT_MODEL_NAME="${{ secrets.DEFAULT_MODEL_NAME }}" \
+            --from-literal=DEFAULT_EVALUATION_MODEL="${{ secrets.DEFAULT_EVALUATION_MODEL }}" \
+            --from-literal=DEFAULT_EMBEDDING_MODEL="${{ secrets.DEFAULT_EMBEDDING_MODEL }}" \
             --from-literal=GOOGLE_APPLICATION_CREDENTIALS="${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}" \
             --from-literal=VERTEX_AI_LOCATION="${{ secrets.VERTEX_AI_LOCATION }}" \
             --from-literal=VERTEX_AI_PROJECT="${{ secrets.VERTEX_AI_PROJECT }}" \
