--- a/apps/polyphemus/pyproject.toml
+++ b/apps/polyphemus/pyproject.toml
@@ -37,10 +37,11 @@ dependencies = [
 toxicity = [
     "google-api-python-client",
 ]
-# Optional: Vertex AI model deployment (for vertex_ai/ scripts)
+# Optional: Vertex AI model deployment (for model-deployment/ scripts)
 vertex-ai = [
     "google-cloud-aiplatform>=1.38.0",
     "google-cloud-compute>=1.15.0",
+    "google-api-core>=2.15.0",
 ]
 
 [build-system]
