ci: ignore empty uv cache in sdk test workflow
The uv cache clean step wipes the cache directory, causing the
post-job save to fail. Add ignore-nothing-to-cache to prevent this.

--- a/.github/workflows/sdk-test.yml
+++ b/.github/workflows/sdk-test.yml
@@ -32,6 +32,7 @@ jobs:
       with:
         version: latest
         enable-cache: true
+        ignore-nothing-to-cache: true
 
     # - name: Type check SDK
     #   run: |
