update endpoint naming logic

--- a/.github/workflows/polyphemus-vertex-ai.yml
+++ b/.github/workflows/polyphemus-vertex-ai.yml
@@ -40,7 +40,7 @@ on:
         options:
           - auto
           - outlines
-          - lm-format-enforcer
+          #- lm-format-enforcer
 
 env:
   SA_KEY_PATH: 'gcp-sa-key.json'
