--- a/apps/backend/src/rhesis/backend/app/mcp_tools.yaml
+++ b/apps/backend/src/rhesis/backend/app/mcp_tools.yaml
@@ -22,20 +22,21 @@ tools:
       List test sets in the organization. Test sets group related tests
       that share a common behavior, category, or theme.
 
-  - name: create_test_set
-    method: POST
-    path: /test_sets/
-    description: >
-      Create a new test set. Requires a name and can include a description,
-      behavior, category, topic, and associated test IDs.
-
   - name: create_test_set_bulk
     method: POST
     path: /test_sets/bulk
     description: >
-      Create a test set with its tests in a single operation. Provide the
-      test set metadata and an array of test objects (prompt, expected
-      behavior, category, etc.).
+      Create a test set with its tests in a single operation. This is
+      the preferred way to create test sets — always include tests.
+      Body format: {"name": "...", "description": "...",
+      "short_description": "...", "tests": [...]}. Each test object:
+      {"prompt": {"content": "the test prompt text", "language_code":
+      "en", "expected_response": "optional expected answer"}, "behavior":
+      "behavior name", "category": "category name", "topic": "topic
+      name"}. The behavior, category, and topic are strings (names, not
+      IDs) — they are resolved or created automatically. Use
+      list_behaviors, list_categories, and list_topics to discover
+      existing values.
 
   # ── Tests ─────────────────────────────────────────────────
   - name: list_tests
@@ -44,20 +45,6 @@ tools:
     description: >
       List tests in the organization. Each test defines a prompt,
       expected response behavior, and optional metadata.
-
-  - name: create_test
-    method: POST
-    path: /tests/
-    description: >
-      Create a single test. A test defines a prompt to send to an
-      endpoint and the expected behavior for evaluation.
-
-  - name: create_tests_bulk
-    method: POST
-    path: /tests/bulk
-    description: >
-      Create multiple tests in a single operation. Provide an array
-      of test objects to create them all at once.
 
   - name: execute_tests
     method: POST
