--- a/sdk/pyproject.toml
+++ b/sdk/pyproject.toml
@@ -137,6 +137,7 @@ dev = [
     "psycopg2-binary==2.9.9", # to match the version in the backend
     "pytest-cov>=7.0.0",
     "garak>=0.9.0.4",
+    "rhesis-penelope",
 ]
 
 [build-system]
@@ -173,3 +174,6 @@ filterwarnings = [
     # Ignore Pydantic V2 deprecation warnings from external dependencies
     "ignore::pydantic.warnings.PydanticDeprecatedSince20",
 ]
+
+[tool.uv.sources]
+rhesis-penelope = { path = "../penelope", editable = true }
