--- a/.github/workflows/polyphemus-vertex-ai.yml
+++ b/.github/workflows/polyphemus-vertex-ai.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [main]
     paths:
-      - 'apps/polyphemus/model-deployment/**'
+      - 'apps/polyphemus/model_deployment/**'
       - '.github/workflows/polyphemus-vertex-ai.yml'
   workflow_dispatch:
     inputs:
@@ -55,7 +55,7 @@ jobs:
       - name: Validate environment parameter
         uses: ./.github/actions/validate-environment
         with:
-          environment: ${{ github.event.inputs.environment }}
+          environment: ${{ github.event.inputs.environment || 'dev' }}
 
   deploy-to-gcp-services:
     needs: validate-inputs
@@ -63,10 +63,10 @@ jobs:
     permissions:
       contents: read
       id-token: write
-    environment: ${{ inputs.environment || github.event.inputs.environment || 'dev' }}
+    environment: ${{ github.event.inputs.environment || 'dev' }}
 
     env:
-      ENVIRONMENT: ${{ inputs.environment || github.event.inputs.environment || 'dev' }}
+      ENVIRONMENT: ${{ github.event.inputs.environment || 'dev' }}
 
     steps:
       - name: Checkout repository
@@ -158,7 +158,7 @@ jobs:
           echo "Deployment arguments: $ARGS"
 
       - name: Deploy models to GCP Services
-        working-directory: apps/polyphemus/model-deployment
+        working-directory: apps/polyphemus
         run: |
           echo "🚀 Deploying models to GCP Services..."
           echo "Environment: ${{ env.ENVIRONMENT }}"
@@ -166,7 +166,7 @@ jobs:
           echo "Region: ${{ env.GCP_REGION }}"
           echo "Arguments: ${{ env.DEPLOY_ARGS }}"
           
-          uv run --project .. python deploy.py ${{ env.DEPLOY_ARGS }}
+          uv run python -m model_deployment.deploy ${{ env.DEPLOY_ARGS }}
 
       - name: Generate deployment summary
         if: success()
@@ -198,7 +198,7 @@ jobs:
           ## Resources
           - [GCP Services Console](https://console.cloud.google.com/vertex-ai/endpoints?project=${{ env.GCP_PROJECT_ID }})
           - [GCS Storage](https://console.cloud.google.com/storage?project=${{ env.GCP_PROJECT_ID }})
-          - [Documentation](apps/polyphemus/model-deployment/README.md)
+          - [Documentation](apps/polyphemus/model_deployment/README.md)
           EOF
 
       - name: Handle deployment failure
@@ -220,5 +220,5 @@ jobs:
           
           ## Resources
           - [GCP Services Console](https://console.cloud.google.com/services/dashboard?project=${{ env.GCP_PROJECT_ID }})
-          - [Documentation](apps/polyphemus/model-deployment/README.md)
+          - [Documentation](apps/polyphemus/model_deployment/README.md)
           EOF
