fix(polyphemus): address P2 code quality issues from review
Remove unused is_for_training param from check_quota (accepted but
never read; only ever called with False).

Fix broad exception swallowing in check_quota: re-raise ValueError
(quota exceeded) and PermissionDenied/Forbidden so auth and quota
failures actually stop deployment instead of being silently ignored.

Remove --skip-existing CLI flag from deploy.py: action="store_true"
with default=True made it always True, so passing it did nothing.
Behaviour is preserved via skip_existing=not args.force.

Replace grep -oP with grep -oE in polyphemus.yml: -P (PCRE) is a
GNU extension; -oE with [0-9]+$ is POSIX-compatible ERE.

--- a/.github/workflows/polyphemus.yml
+++ b/.github/workflows/polyphemus.yml
@@ -354,7 +354,7 @@ jobs:
             --project=${{ env.PROJECT_ID }} \
             --filter="displayName:${ENDPOINT_NAME}" \
             --format="value(name)" \
-            --limit=1 | grep -oP '[0-9]+$' || echo "")
+            --limit=1 | grep -oE '[0-9]+$' || echo "")
           
           if [ -n "$ENDPOINT_ID" ]; then
             echo "POLYPHEMUS_ENDPOINT_ID=$ENDPOINT_ID" >> $GITHUB_ENV
