--- a/apps/polyphemus/model_deployment/.env.example
+++ b/apps/polyphemus/model_deployment/.env.example
@@ -7,11 +7,12 @@ GCP_REGION=us-central1
 GCP_SERVICE_ACCOUNT=your-service-account@your-project.iam.gserviceaccount.com
 
 # Model path and default model (use same as GitHub secrets)
-# MODEL_PATH = GCS parent path to the model folder (not including the model folder name)
-# DEFAULT_MODEL = Model folder name under MODEL_PATH
-# Full path = MODEL_PATH/DEFAULT_MODEL (e.g. gs://your-bucket-name/cache/your-model-name)
-MODEL_PATH=gs://your-bucket-name/cache
-DEFAULT_MODEL=your-model-name
+# POLYPHEMUS_MODEL_PATH = GCS parent path to the model folder (not including the model folder name)
+# POLYPHEMUS_MODEL_BUCKET = GCS bucket name (optional; derived from path if not set)
+# POLYPHEMUS_DEFAULT_MODEL = Model folder name under POLYPHEMUS_MODEL_PATH
+# Full path = POLYPHEMUS_MODEL_PATH/POLYPHEMUS_DEFAULT_MODEL (e.g. gs://your-bucket-name/cache/your-model-name)
+POLYPHEMUS_MODEL_PATH=gs://your-bucket-name/cache
+POLYPHEMUS_DEFAULT_MODEL=your-model-name
 
 # HuggingFace Token (Optional)
 # Required only for private HuggingFace models
