--- a/infrastructure/config/service-secrets-config.sh.example
+++ b/infrastructure/config/service-secrets-config.sh.example
@@ -75,9 +75,9 @@ export DEV_NEXT_PUBLIC_AUTH0_DOMAIN="dev-tenant.auth0.com"
 export DEV_DATABASE_URL="postgresql://rhesis-user:password@/rhesis?host=/cloudsql/rhesis-dev:europe-west4:db-dev"
 # Polyphemus service variables
 export DEV_POLYPHEMUS_REGION="gcp-region"  # GCP region for Polyphemus Cloud Run deployment
-export DEV_DEFAULT_MODEL="default-model"  # Default model for Polyphemus
-export DEV_MODEL_BUCKET="model-bucket-name"
-export DEV_MODEL_PATH="gs://model-bucket-name/models"
+export DEV_POLYPHEMUS_DEFAULT_MODEL="default-model"  # Default model for Polyphemus
+export DEV_POLYPHEMUS_MODEL_BUCKET="model-bucket-name"
+export DEV_POLYPHEMUS_MODEL_PATH="gs://model-bucket-name/models"
 
 # Staging environment variables
 # These will be set in the 'stg' GitHub environment
@@ -152,9 +152,9 @@ export STG_NEXT_PUBLIC_AUTH0_DOMAIN="stg-tenant.auth0.com"
 export STG_DATABASE_URL="postgresql://rhesis-user:password@/rhesis?host=/cloudsql/rhesis-stg:europe-west4:db-stg"
 # Polyphemus service variables
 export STG_POLYPHEMUS_REGION="gcp-region"  # GCP region for Polyphemus Cloud Run deployment
-export STG_DEFAULT_MODEL="default-model"  # Default model for Polyphemus
-export STG_MODEL_BUCKET="model-bucket-name"
-export STG_MODEL_PATH="gs://model-bucket-name/models"
+export STG_POLYPHEMUS_DEFAULT_MODEL="default-model"  # Default model for Polyphemus
+export STG_POLYPHEMUS_MODEL_BUCKET="model-bucket-name"
+export STG_POLYPHEMUS_MODEL_PATH="gs://model-bucket-name/models"
 
 # Production environment variables
 # These will be set in the 'prd' GitHub environment
@@ -229,9 +229,9 @@ export PRD_NEXT_PUBLIC_AUTH0_DOMAIN="tenant.auth0.com"
 export PRD_DATABASE_URL="postgresql://rhesis-user:password@/rhesis?host=/cloudsql/rhesis-prd:europe-west4:db-prd"
 # Polyphemus service variables
 export PRD_POLYPHEMUS_REGION="gcp-region"  # GCP region for Polyphemus Cloud Run deployment
-export PRD_DEFAULT_MODEL="default-model"  # Default model for Polyphemus
-export PRD_MODEL_BUCKET="model-bucket-name"
-export PRD_MODEL_PATH="gs://model-bucket-name/models"
+export PRD_POLYPHEMUS_DEFAULT_MODEL="default-model"  # Default model for Polyphemus
+export PRD_POLYPHEMUS_MODEL_BUCKET="model-bucket-name"
+export PRD_POLYPHEMUS_MODEL_PATH="gs://model-bucket-name/models"
 
 # Test environment variables (for GitHub Actions testing)
 # These will be set as environment-specific secrets in the 'test' environment
@@ -276,7 +276,7 @@ export TEST_BROKER_URL="redis://localhost:6379/0"
 export TEST_CELERY_RESULT_BACKEND="redis://localhost:6379/0"
 # Polyphemus service variables
 export TEST_POLYPHEMUS_REGION="gcp-region"  # GCP region for Polyphemus Cloud Run deployment
-export TEST_DEFAULT_MODEL="default-model"  # Default model for Polyphemus
+export TEST_POLYPHEMUS_DEFAULT_MODEL="default-model"  # Default model for Polyphemus
 
 # Get the GitHub repository from the current directory or specify it manually
 REPO=$(gh repo view --json nameWithOwner -q .nameWithOwner 2>/dev/null || echo "")
