added polyphemud default mode variable

--- a/.github/workflows/polyphemus.yml
+++ b/.github/workflows/polyphemus.yml
@@ -398,6 +398,7 @@ jobs:
           POLYPHEMUS_ENDPOINT_ID=${{ env.POLYPHEMUS_ENDPOINT_ID }},
           POLYPHEMUS_PROJECT_ID=${{ env.PROJECT_ID }},
           POLYPHEMUS_LOCATION=${{ env.POLYPHEMUS_REGION }},
+          POLYPHEMUS_DEFAULT_MODEL=${{ secrets.POLYPHEMUS_DEFAULT_MODEL }},
           SQLALCHEMY_DATABASE_URL=${{ secrets.SQLALCHEMY_DATABASE_URL }},
           SQLALCHEMY_DB_MODE=${{ secrets.SQLALCHEMY_DB_MODE }},
           SQLALCHEMY_DB_DRIVER=${{ secrets.SQLALCHEMY_DB_DRIVER }},
@@ -435,6 +436,7 @@ jobs:
           POLYPHEMUS_ENDPOINT_ID=${{ env.POLYPHEMUS_ENDPOINT_ID }},
           POLYPHEMUS_PROJECT_ID=${{ env.PROJECT_ID }},
           POLYPHEMUS_LOCATION=${{ env.POLYPHEMUS_REGION }},
+          POLYPHEMUS_DEFAULT_MODEL=${{ secrets.POLYPHEMUS_DEFAULT_MODEL }},
           SQLALCHEMY_DATABASE_URL=${{ secrets.SQLALCHEMY_DATABASE_URL }},
           SQLALCHEMY_DB_MODE=${{ secrets.SQLALCHEMY_DB_MODE }},
           SQLALCHEMY_DB_DRIVER=${{ secrets.SQLALCHEMY_DB_DRIVER }},
